--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body style="background-image: url(./img/background2.png)">
     <div class="container">
-        <input class="input-task"  placeholder="O que tenho que fazer...">
+        <input class="input-task"  placeholder="O que tenho que fazer..." maxlength="50">
         <button class="button-add-task">Adicionar</button>
 
         <ul class="list-task"></ul>
